  * use host tar to unpack packages again as busybox' tar doesn't support pax
    (aka POSIX 1003.1-2001) tar format
  * Move each library-package into separate subdirectory (#1093)
  * Readd unsquashfs and mksquashfs without lzma support (needed for 3370)
  * stripping of kernel modules added
  * stripping of shell scripts added
  * kconfig 2.6.39
  * menu configuration cache (Config.in.cache)
  * target-toolchain:
    + Update gcc-4.6.x version to 4.6.3
    + Update uClibc-0.9.32.x version to 0.9.32.1
  * menuconfig: firmware packaging (fwmod) special options FREETZ_FWMOD_*
    + unpack, modify, pack can be freely combined now
    + AVM SDK firmware can be packed now, even if image is too big for flash
    + USB/NFS root can be packed into tar.gz image with correct user/group and
      special file flags for devices
    + NFS/USB root can be sudo-unpacked to user-specified target folder, ready
      to be mounted
  * fwmod: new parameters to support FREETZ_FWMOD_* menuconfig options (also
    works stand-alone)
    + -f         force pack even if image is too big for flash (AVM SDK)
    + -z         zip file system into archive for USB/NFS root
    + -c <dir>   copy file system to target directory for NFS/USB root (implies -z)
  * Makefile: obsolete variables FWMOD_OPTS, FWMOD_NOPACK because of
    FREETZ_FWMOD_* menuconfig options

- New tools and hooks:
  * fmake: wrapper script for "make", located in Freetz root directory,
    including sample code for a post-build hook sending an e-mail message with
    timing and build log data to a predefined recipient. This makes life easier
    for both users and developers in two ways:
      1) Get actively notified about long-running build processes instead of
         having to look after them (push vs. pull principle).
      2) Make life easier for Freetz developers supporting users who keep
         asking: "How do I create a build log?" Now we can just tell them to