@@ -7,12 +7,15 @@ ifeq ($(strip $(FREETZ_TOOLCHAIN_CCACHE)),y)
 	CCACHE:=ccache-kernel ccache
 endif
 
-KERNEL_TOOLCHAIN_MD5_mipsel_3.4.6:=6b4bea759a111f39821310d82702099b
-KERNEL_TOOLCHAIN_MD5_mips_4.4.6:=865b9bed7aa07565e1d229ec7c73b3f9
-KERNEL_TOOLCHAIN_MD5_mipsel_4.4.6:=e3b0410b9e3f6517dac99dd175ed1a46
-KERNEL_TOOLCHAIN_MD5:=$(KERNEL_TOOLCHAIN_MD5_$(TARGET_ARCH)_$(KERNEL_TOOLCHAIN_GCC_VERSION))
+KERNEL_TOOLCHAIN_ID:=$(TARGET_ARCH)_$(KERNEL_TOOLCHAIN_GCC_VERSION)
 
-KERNEL_TOOLCHAIN_VERSION:=r8342
+KERNEL_TOOLCHAIN_MD5_mipsel_3.4.6:=6b4bea759a111f39821310d82702099b
+KERNEL_TOOLCHAIN_MD5_mips_4.4.7:=903e1dc96578776fcfb009c83c1395fb
+KERNEL_TOOLCHAIN_MD5_mipsel_4.4.7:=f56fee0d50c1dbbb64e54692a1715223
+KERNEL_TOOLCHAIN_MD5:=$(KERNEL_TOOLCHAIN_MD5_$(KERNEL_TOOLCHAIN_ID))
+
+KERNEL_TOOLCHAIN_VERSION_mipsel_3.4.6:=r8342
+KERNEL_TOOLCHAIN_VERSION:=$(or $(KERNEL_TOOLCHAIN_VERSION_$(KERNEL_TOOLCHAIN_ID)),r8800)
 KERNEL_TOOLCHAIN_SOURCE:=$(TARGET_ARCH)_gcc-$(KERNEL_TOOLCHAIN_GCC_VERSION)-freetz-$(KERNEL_TOOLCHAIN_VERSION)-shared-glibc.tar.lzma
 
 TARGET_TOOLCHAIN_ID:=$(TARGET_ARCH)_$(TARGET_TOOLCHAIN_GCC_VERSION)_$(TARGET_TOOLCHAIN_UCLIBC_VERSION)
