@@ -26,7 +26,7 @@ GCC_KERNEL_MAKE_DIR:=$(TOOLCHAIN_DIR)/make/kernel/gcc
 GCC_KERNEL_BUILD_DIR:=$(KERNEL_TOOLCHAIN_DIR)/gcc-$(GCC_KERNEL_VERSION)-build
 
 GCC_KERNEL_MD5_3.4.6 := 4a21ac777d4b5617283ce488b808da7b
-GCC_KERNEL_MD5_4.4.6 := ab525d429ee4425050a554bc9247d6c4
+GCC_KERNEL_MD5_4.4.7 := 295709feb4441b04e87dea3f1bab4281
 GCC_KERNEL_MD5       := $(GCC_KERNEL_MD5_$(GCC_KERNEL_VERSION))
 
 GCC_KERNEL_INITIAL_PREREQ=
