@@ -24,7 +24,7 @@ GCC_SITE:=@GNU/gcc/gcc-$(GCC_VERSION)
 GCC_DIR:=$(TARGET_TOOLCHAIN_DIR)/gcc-$(GCC_VERSION)
 GCC_MAKE_DIR:=$(TOOLCHAIN_DIR)/make/target/gcc
 
-GCC_MD5_4.4.6 := ab525d429ee4425050a554bc9247d6c4
+GCC_MD5_4.4.7 := 295709feb4441b04e87dea3f1bab4281
 GCC_MD5_4.5.3 := 8e0b5c12212e185f3e4383106bfa9cc6
 GCC_MD5_4.6.3 := 773092fe5194353b02bb0110052a972e
 GCC_MD5       := $(GCC_MD5_$(GCC_VERSION))
