@@ -1,6 +1,6 @@
 #!/bin/sh
 
-KERNEL_TOOLCHAIN_VERSION=r8342
+KERNEL_TOOLCHAIN_VERSION=r8800
 KERNEL_TOOLCHAIN_FILENAME_SUFFIX=freetz-${KERNEL_TOOLCHAIN_VERSION}-shared-glibc
 TARGET_TOOLCHAIN_VERSION=r8743
 TARGET_TOOLCHAIN_FILENAME_SUFFIX=freetz-${TARGET_TOOLCHAIN_VERSION}-shared-glibc
