@@ -19,7 +19,10 @@ Latest changes:
   * stripping of shell scripts added
   * kconfig 2.6.39
   * menu configuration cache (Config.in.cache)
+  * kernel-toolchain:
+    + Update gcc-4.4.x version to 4.4.7
   * target-toolchain:
+    + Update gcc-4.4.x version to 4.4.7
     + Update gcc-4.6.x version to 4.6.3
     + Update uClibc-0.9.32.x version to 0.9.32.1
   * menuconfig: firmware packaging (fwmod) special options FREETZ_FWMOD_*
